2008-09-04  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.
	* Generator.pm: Fix GetDocAction(), GetDocFunc() to pass the correct number
	  of types to GetDoc*Type(); allow GetDocFunc() to accept the return type
	  name (needed for .Compose() documentation).
	* Makefile: Rename mkcurry to mkdelegates.
	* mkcurry: Rename to mkdelegates.
	* mkdelegates: Add .Compose() extension methods.
	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Rename Mono.Rocks/Curry.cs 
	  to Mono.Rocks/Delegates.cs.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Rename
	  Tests/Mono.Rocks.Tests/CurryTest.cs to 
	  Tests/Mono.Rocks.Tests/DelegateTest.cs.

2008-09-03  Jonathan Pryor  <jpryor@novell.com>

	* mktuples, doc/en/**: Fix doc typo.

2008-09-03  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush documentation for Int32Rocks.

2008-09-03  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush documentation for .With().

2008-09-02  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Object.cs 
	  to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add 
	  Tests/Mono.Rocks.Tests/ObjectTest.cs to the tests.

2008-09-02  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.

2008-09-01  Jonathan Pryor  <jpryor@novell.com>

	* doc/doc.mdproj: Add additional XML documentation files.
	* doc/en/**: Flush.

2008-09-01  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Nullable.cs 
	  to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add 
	  Tests/Mono.Rocks.Tests/NullableTest.cs to the tests.
	* mktuples.cs: Don't generate the Tuple.CreateNullable() methods anymore, as
	  NullableRocks.ToNullable() serves the same purpose (easily converting a
	  value type into a nullable value type).
	* doc/en/**: Flush; remove Tuple.CreateNullable(), add Nullable.xml.

2008-08-31  Jonathan Pryor  <jpryor@novell.com>
