@@ -1,6 +1,15 @@
 <Namespace Name="Mono.Rocks">
   <Docs>
-    <summary>To be added.</summary>
-    <remarks>To be added.</remarks>
+    <summary>
+      The Mono.Rocks namespace provides types and extension methods to assist
+      a wide domain of problems.
+    </summary>
+    <remarks>
+      <para>
+        <see cref="N:Mono.Rocks" /> provides utility types and extension
+        methods to assist a wide domain of areas, including improved C#
+        support for functional programming.
+      </para>
+    </remarks>
   </Docs>
 </Namespace>
